--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is an example used to illustrate a blog post about sending array as query parameters",
   "main": "client.js",
   "scripts": {
+    "start:joi-example": "nodemon server-joi-example.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,10 +28,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "hapi": "^18.1.0",
-    "joi": "^14.3.1"
+    "joi": "^14.3.1",
+    "qs": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
   }
 }
