Add server for query setting example

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is an example used to illustrate a blog post about sending array as query parameters",
   "main": "client.js",
   "scripts": {
+    "start:query-setting": "nodemon server-query-setting.js",
     "start:joi-example": "nodemon server-joi-example.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
