--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start:query-setting": "nodemon server-query-setting.js",
     "start:joi-example": "nodemon server-joi-example.js",
+    "start:client": "webpack-dev-server client.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,7 +28,6 @@
   },
   "homepage": "https://github.com/Nargonath/hapijs-array-query-params#readme",
   "dependencies": {
-    "axios": "^0.18.0",
     "hapi": "^18.1.0",
     "joi": "^14.3.1",
     "qs": "^6.6.0"
